# python-data-piscine

python-0/ex00/: Hello.py
python-0/ex01/: format_ft_time.py
python-0/ex02/: find_ft_type.py
python-0/ex03/: NULL_not_found.py
python-0/ex04/: whatis.py
python-0/ex05/: building.py
python-0/ex06/: filterstring.py  ft_filter.py
python-0/ex07/: sos.py
python-0/ex08/: Loading.py  tester.py
python-0/ex09/: README.md  pyproject.toml
python-0/ex09/src/: azeite.py
python-0/ex09/src/ft_package/: azeite.py
